crates/toml_edit/tests/snapshots/invalid/string/bad-uni-esc-ml-05.stderr
TOML parse error at line 1, column 29
  |
1 | bad-uni-esc-ml-05 = """val\Ugggggggg"""
  |                             ^
too few unicode value digits, expected unicode hexadecimal value
